--- a/views/layout.jade
+++ b/views/layout.jade
@@ -17,6 +17,9 @@ html
 		//jQuery
 		script(src='/bower_components/jquery/dist/jquery.min.js')
 		
+		//querystring
+		script(src='/bower_components/qs/dist/qs.min.js')
+		
 		//bootstrap
 		//script(src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js')
 		//script(src='//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/js/bootstrap.min.js')
