--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,7 +4,7 @@ html
 		title= title
 
 		//mobile optimized
-		meta(name='viewport', content='width=device-width, initial-scale=1.0')
+		//meta(name='viewport', content='width=device-width, initial-scale=1.0')
 
 		//css
 		link(rel='stylesheet', href='/stylesheets/style.css')
@@ -22,6 +22,6 @@ html
 		//script(src='//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/js/bootstrap.min.js')
 		//link(rel='stylesheet', href='//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/css/bootstrap-theme.min.css')
 		//link(rel='stylesheet', href='//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/css/bootstrap.min.css')
-	body
-		block content
+	
+	block content
 		
