--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,7 +4,7 @@ html
 		title= title
 
 		//mobile optimized
-		//meta(name='viewport', content='width=device-width, initial-scale=1.0')
+		meta(name='viewport', content='width=device-width, initial-scale=1.0')
 
 		//css
 		link(rel='stylesheet', href='/stylesheets/style.css')
@@ -16,6 +16,11 @@ html
 		
 		//jQuery
 		script(src='/bower_components/jquery/dist/jquery.min.js')
+		
+		
+		script(src='/bower_components/babel/browser.min.js')
+		
+		
 		
 		//bootstrap
 		//script(src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js')
