--- a/views/layout.jade
+++ b/views/layout.jade
@@ -15,12 +15,10 @@ html
 		link(rel='stylesheet', href='https://fonts.googleapis.com/icon?family=Material+Icons')
 		
 		//jQuery
-		script(src='/bower_components/jquery/dist/jquery.min.js')
+		script(src='/bower_components/jquery/dist/jquery.min.js')		
 		
-		
-		script(src='/bower_components/babel/browser.min.js')
-		
-		
+		//Material icon fonts
+		link(rel="stylesheet", href="https://fonts.googleapis.com/icon?family=Material+Icons")
 		
 		//bootstrap
 		//script(src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js')
