fix ui for small screens

--- a/views/index.jade
+++ b/views/index.jade
@@ -24,16 +24,17 @@ block content
 						
 				.mdl-cell.mdl-cell--12-col.mdl-color--white.mdl-shadow--2dp(id="mgbrgbr", style="padding:10px;")
 					iframe(id="routeMap", width="100%", height="400", src="")
-		footer(class="mdl-mini-footer")
-			.mdl-mini-footer__left-section
-				.mdl-logo ||
-				ul.mdl-mini-footer__link-list
-					li
-						a(href='/disclaimer') Disclaimer
-					li
-						a(href='#') Changelog
-					li
-						a v0.1
+				.mdl-cell.mdl-cell--12-col
+					footer(class="mdl-mini-footer")
+						.mdl-mini-footer__left-section
+							.mdl-logo ||
+							ul.mdl-mini-footer__link-list
+								li
+									a(href='/disclaimer') Disclaimer
+								li
+									a(href='#') Changelog
+								li
+									a v0.1
 		
 	
 		script(type='text/javascript', src='/javascripts/index.js')
