display prices from uber

--- a/views/index.jade
+++ b/views/index.jade
@@ -7,7 +7,7 @@ block content
 				.mdl-cell.mdl-cell--12-col
 					h2= title
 					h6= "Cost of driving compared with realtime fare estimates from Uber."
-				.mdl-cell.mdl-cell--12-col.mdl-color--white.mdl-shadow--2dp(id="inputDiv", style="padding:10px;")
+				.mdl-grid.mdl-cell.mdl-cell--12-col.mdl-color--white.mdl-shadow--2dp(id="inputDiv", style="padding:10px;")
 					//form(action= '/result', method='POST')
 					.mdl-textfield.mdl-js-textfield.mdl-textfield--floating-label.mdl-cell--12-col
 						input(class="mdl-textfield__input", type="text",  id="locationFromInput", name="from")
@@ -17,11 +17,16 @@ block content
 						label(class="mdl-textfield__label", for="locationToInput") To
 					button(class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent mdl-js-ripple-effect mdl-cell--12-col", id="submitButton") Submit
 					.mdl-progress.mdl-js-progress.mdl-progress__indeterminate.mdl-cell--12-col(id="progressBar", style="margin-top:10px") 
-				.mdl-cell.mdl-cell--12-col.mdl-color--white.mdl-shadow--2dp(id="resultDiv", style="padding:10px;")
+				.mdl-grid.mdl-cell.mdl-cell--12-col.mdl-color--white.mdl-shadow--2dp(id="resultDiv", style="padding:10px;")
+					.mdl-cell.mdl-cell--1-col
+						i(class="material-icons") place
+					.mdl-cell.mdl-cell--10-col(style="text-align:center")
+						a ---------------------------------------------------------------------->
+					.mdl-cell.mdl-cell--1-col
+						i(class="material-icons",style="position: absolute;") place
 					.resultSubDiv
 					button(class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored mdl-js-ripple-effect", id="backButton")
-						i(class="material-icons") arrow_back
-						
+						i(class="material-icons") arrow_back	
 				.mdl-cell.mdl-cell--12-col.mdl-color--white.mdl-shadow--2dp(id="mgbrgbr", style="padding:10px;")
 					iframe(id="routeMap", width="100%", height="400", src="")
 				.mdl-cell.mdl-cell--12-col
