--- a/views/index.jade
+++ b/views/index.jade
@@ -21,10 +21,10 @@ block content
 					.mdl-cell.mdl-cell--1-col
 						i(class="material-icons") place
 					.mdl-cell.mdl-cell--10-col(style="text-align:center")
-						a ---------------------------------------------------------------------->
+						a -------------------------------------------------------------->
 					.mdl-cell.mdl-cell--1-col
 						i(class="material-icons",style="position: absolute;") place
-					.resultSubDiv
+					.resultSubDiv.mdl-cell.mdl-cell--12-col
 					button(class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored mdl-js-ripple-effect", id="backButton")
 						i(class="material-icons") arrow_back	
 				.mdl-cell.mdl-cell--12-col.mdl-color--white.mdl-shadow--2dp(id="mgbrgbr", style="padding:10px;")
