--- a/views/index.jade
+++ b/views/index.jade
@@ -23,10 +23,10 @@ block content
 						a -------------------------------------------------------------->
 						i(class="material-icons",style="position: absolute;") place
 					.resultSubDiv.mdl-cell.mdl-cell--12-col
-					button(class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored mdl-js-ripple-effect", id="backButton")
+					button(class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored mdl-js-ripple-effect mdl-cell mdl-cell--4-col", id="backButton")
 						i(class="material-icons") arrow_back	
 				.mdl-cell.mdl-cell--12-col.mdl-color--white.mdl-shadow--2dp(id="mgbrgbr", style="padding:10px;")
-					iframe(id="routeMap", width="100%", height="400", src="")
+					iframe(id="routeMap", width="100%", height="400", src="", frameborder="0", allowfullscreen="", style="display:block;margin: 0  auto;")
 				.mdl-cell.mdl-cell--12-col
 					footer(class="mdl-mini-footer")
 						.mdl-mini-footer__left-section
