--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,56 @@
 body {
-  padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  padding:0px;
 }
 
 a {
   color: #00B7FF;
+}
+
+#main_grid {
+	max-width:600px;
+}
+
+#inputDiv, #resultGrid, #mgbrgbr{
+	padding:10px;
+}
+
+#progressBar{
+	margin-top:10px;
+}
+
+#resultHeader, #resultDiv{
+	text-align:center;
+}
+
+#uberResultFrame{
+	border-right: dashed #828282;
+	border-right-width: 1px;
+	margin: 0;
+	padding:10px;
+}
+
+#driveResultFrame{
+	margin: 0;
+	padding:10px;
+}
+
+#driveIcon, #uberIcon{
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	max-width:40%;
+	max-height:40%;
+	-webkit-filter: grayscale(100%);
+	filter: grayscale(100%);
+	opacity: 0.2;
+}
+
+#routeMap{
+	display:block;
+	margin: 0  auto;
+}
+
+#resultDiv p {
+    color: #666666;
 }
