--- a/views/layout.jade
+++ b/views/layout.jade
@@ -18,7 +18,8 @@ html
 		script(src='/bower_components/jquery/dist/jquery.min.js')		
 		
 		//Material icon fonts
-		link(rel="stylesheet", href="https://fonts.googleapis.com/icon?family=Material+Icons")
+		//link(rel="stylesheet", href="https://fonts.googleapis.com/icon?family=Material+Icons")
+		link(href='https://fonts.googleapis.com/css?family=Open+Sans', rel='stylesheet', type='text/css')
 		
 		//bootstrap
 		//script(src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js')
