--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,6 @@
+
 body {
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-  padding:0px;
+  font-family: 'Open Sans', sans-serif;
 }
 
 a {
@@ -28,11 +28,13 @@ a {
 	border-right-width: 1px;
 	margin: 0;
 	padding:10px;
+	float:right;
 }
 
 #driveResultFrame{
 	margin: 0;
 	padding:10px;
+	float:left;
 }
 
 #driveIcon, #uberIcon{
@@ -62,3 +64,30 @@ a {
 #time-icon{
 	font-size: 18px;
 }
+
+#settings_icon{
+    position: absolute;
+    top: 2px;
+    right: 2px;
+	opacity: 0.7;
+}
+
+#resultGrid{
+  position:relative;
+}
+
+#arrow-stem {
+	background: transparent;
+    width: 60%;
+    height: 15px;
+	border-bottom: 10px solid     black;
+		opacity: 0.7;
+}
+
+#arrow-head {
+	border-top: 20px solid transparent;
+	border-left: 100px solid black;
+	border-bottom: 20px solid transparent;
+	float: left;
+	opacity: 0.7;
+	}
