refactor submit button code

--- a/views/faq.jade
+++ b/views/faq.jade
@@ -7,9 +7,9 @@ block content
 			.mdl-cell.mdl-cell--12-col
 				h3 FAQ
 				p <strong>Is this site owned or operated by Uber?</strong><br>
-					|Nope.<br>The fare estimates come direct from uber. The site otherwise has no relationship to Uber whatsoever.
+					|Nope. The fare estimates come direct from uber. The site otherwise has no relationship to Uber whatsoever.
 				p <br><strong>How accurate is this thing?</strong><br>
-					|The driving estimate takes into account current traffic conditions but it might be off by +/- 10% because of a number of other factors that can affect the cost.<br>
+					|Current traffic conditions are taken into accout while calculating the driving estimate but it might still be off by +/- 10% because of a number of other factors that can affect the cost.<br>
 					|The estimates from uber are current and should closely match what you see in Uber's app. 
 			.mdl-cell.mdl-cell--12-col
 				a(href="/") Back
