implement traffic multiplier

--- a/views/index.jade
+++ b/views/index.jade
@@ -42,6 +42,7 @@ block content
 						i(class="material-icons") local_gas_station
 						span(id="fuel")
 					.mdl-cell.mdl-cell--12-col
+						p(style="text-align:center;") * Based on current traffic conditions.
 						button(class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored mdl-js-ripple-effect", id="backButton")
 							i(class="material-icons") arrow_back
 							| Back
@@ -58,7 +59,7 @@ block content
 		
 	
 		script(type='text/javascript', src='/javascripts/index.js')
-		script(type='text/javascript', src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDnfJIBZj1_q75mLz20h-tSft1gl5SeXFs&libraries=places&callback=initAutocomplete", async, defer)
+		script(type='text/javascript', src="https://maps.googleapis.com/maps/api/js?key=***REMOVED***&libraries=places&callback=initAutocomplete", async, defer)
 		
 		
 		
