--- a/views/layout.jade
+++ b/views/layout.jade
@@ -21,6 +21,10 @@ html
 		//link(rel="stylesheet", href="https://fonts.googleapis.com/icon?family=Material+Icons")
 		link(href='https://fonts.googleapis.com/css?family=Open+Sans', rel='stylesheet', type='text/css')
 		
+		//maps
+		//link(rel="stylesheet", href="/maps/documentation/javascript/demos/demos.css")
+
+		
 		//bootstrap
 		//script(src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js')
 		//script(src='//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/js/bootstrap.min.js')
