--- a/views/index.jade
+++ b/views/index.jade
@@ -59,7 +59,7 @@ block content
 									a(href='/faq') FAQ
 		
 	
-		script(type='text/javascript', src='/javascripts/index.js')
+		script(type='text/javascript', src='/js/index.js')
 		script(type='text/javascript', src="https://maps.googleapis.com/maps/api/js?key=***REMOVED***&libraries=places&callback=initAutocomplete", async, defer)
 		//script(type='text/javascript', src="https://maps.googleapis.com/maps/api/js?key=***REMOVED***&callback=initMap", async, defer)
 
