--- a/views/layout.jade
+++ b/views/layout.jade
@@ -21,6 +21,10 @@ html
 		//link(rel="stylesheet", href="https://fonts.googleapis.com/icon?family=Material+Icons")
 		link(href='https://fonts.googleapis.com/css?family=Open+Sans', rel='stylesheet', type='text/css')
 		
+		//polyfill (support for dialog)
+		script(src="/bower_components/dialog-polyfill/dialog-polyfill.js")
+		link(rel="stylesheet", type="text/css", href="/bower_components/dialog-polyfill/dialog-polyfill.css")
+		
 		//maps
 		//link(rel="stylesheet", href="/maps/documentation/javascript/demos/demos.css")
 
