link uglified js

--- a/views/index.jade
+++ b/views/index.jade
@@ -92,7 +92,7 @@ block content
 							| <br>medium<br><small>12 kmpl</small>
 					.mdl-cell.mdl-cell--4-col(style="margin-top:0px;")
 						label(class="mdl-icon-toggle mdl-js-icon-toggle mdl-js-ripple-effect", for="car-toggle-large")
-							input(type="checkbox" id="car-toggle-large" class="mdl-icon-toggle__input")
+							input(type="checkbox" id="H" class="mdl-icon-toggle__input")
 							i(class="mdl-icon-toggle__label material-icons", id="large-car-icon") directions_car
 							| <br>large<br><small>8 kmpl</small>
 				.slider_fuel
@@ -103,5 +103,5 @@ block content
 				button(type="button", class="mdl-button close") OK
 				//button(type="button", class="mdl-button close") Disagree
 
-		script(type='text/javascript', src='/js/src/index.js')
+		script(type='text/javascript', src='/js/index.js')
 		script(type='text/javascript', src="https://maps.googleapis.com/maps/api/js?key=***REMOVED***&libraries=places&callback=initAutocomplete", async, defer)
